fixed latest post being too large, revamped styles and made some smaller changes to content

--- a/src/style/list-items.less
+++ b/src/style/list-items.less
@@ -39,8 +39,11 @@
 		}
 	}
 
-	.med-screen-list {
+	/*.med-screen-list {
 		display: none;
+	}*/
+	.large-screen-list {
+		display: none !important;
 	}
 }
 
@@ -52,12 +55,12 @@
 }
 
 @media only screen and (max-width: 995px){
-	.items-preview-list {
+	/*.items-preview-list {
 		.med-screen-list {
 			display: block !important;
 		}
 		.large-screen-list {
 			display: none !important;
 		}
-	}
+	}*/
 }
